--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -4,6 +4,15 @@
 * {
     font-family: 'Roboto', sans-serif;
 }
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .titulo-landing {
     font-family: "Medula One", cursive;
     color: #487228;
@@ -20,8 +29,11 @@
     width: 500px;
 }
 .footer{
-    background-color: #F8F5ED; 
-    height: 80px;
+    width: 100%;
+    justify-content:center;
+    bottom: 0;
+    position: absolute;
+
 }
 @media (max-width: 1100px){
     .container-capa{
@@ -37,5 +49,8 @@
     }
     .titulo-landing{
         font-size: 40px;
+    }
+    .footer{
+        position: relative;
     }
 } 
