--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -7,10 +7,13 @@
 .titulo-landing {
     font-family: "Medula One", cursive;
     color: #487228;
-    font-size: 70px;
+    font-size: 80px;
 }
 .conteudo-capa{
     width:60%;
+}
+.conteudo-capa h4{
+    font-size:20px;
 }
 .container-capa{
     display: flex;
@@ -37,5 +40,9 @@
     }
     .titulo-landing{
         font-size: 40px;
+    }
+    .container-botao{
+        display: flex;
+        justify-content: center;
     }
 } 
