--- a/src/css/cadastro.css
+++ b/src/css/cadastro.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Medula+One&display=swap');
 
-
+*{
+    font-family: 'Roboto', sans-serif;
+}
 .titulo-formulario {
     font-family: "Medula One", cursive;
     color: #487228;
