FEAT: adição de sobre e quem somos na navbar

--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -38,6 +38,13 @@
     position: absolute;
 
 }
+.link-nav {
+    color: #487228;
+    text-decoration: none;
+}
+.link-nav:hover{
+    color: #1f4106;
+}
 @media (max-width: 1100px){
     .container-capa{
         flex-direction: column-reverse;
