--- a/src/css/registro-palavras.css
+++ b/src/css/registro-palavras.css
@@ -12,6 +12,13 @@
 .input-palavras {
     width: 300px !important;
 }
+.link-nav {
+    color: #487228;
+    text-decoration: none;
+}
+.link-nav:hover{
+    color: #1f4106;
+}
 @media (max-width: 500px) {
     .titulo-inserir-palavra {
         font-size: 50px;
