--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -67,6 +67,16 @@
 .card-link:hover{
     color: #203610;
 }
+.footer{
+    width: 100%;
+    justify-content:center;
+    bottom: 0;
+    position: absolute;
+}
+.giticon{
+    width: 52px;
+    margin: 15px;
+}
 @media (max-width: 1100px){
     .container-capa{
         flex-direction: column-reverse;
@@ -95,5 +105,8 @@
     }
     .pilares{
         width: 100%;
+    }
+    .footer{
+        position: relative;
     }
 } 
