FIX: footer registro

--- a/src/css/registro-palavras.css
+++ b/src/css/registro-palavras.css
@@ -13,4 +13,12 @@
         font-size: 50px;
         text-align: center;
     }
+    
+}
+
+@media (max-width: 1400px) {
+    .footer{
+        bottom: auto;
+    }
+    
 }
