--- a/src/css/busca-palavras.css
+++ b/src/css/busca-palavras.css
@@ -10,3 +10,16 @@
         text-align: center;
     }
 }
+
+
+.busca {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.linguagem{
+    color: #62935F;
+    font-family: "Medula One", cursive;
+}
