FEAT: verificacao de inputs da page cadastro criada

--- a/src/css/tipografia.css
+++ b/src/css/tipografia.css
@@ -43,3 +43,8 @@
 .linkcadastro{
     color: #487228;
 }
+#concluido{
+    font-family: "Medula One", cursive;
+    color: #487228;
+    font-size: 70px;
+}
